--- a/resources/config.json
+++ b/resources/config.json
@@ -1,5 +1,5 @@
 {
-    "cacert": "/etc/local-digital-twins/iothub.crt",
+    "caCert": "/etc/local-digital-twins/iothub.crt",
     "provisioningFile": "/etc/local-digital-twins/provisioning.json",
     "logFile": "/var/log/local-digital-twins/local-digital-twins.log",
     "thingsDb": "/var/lib/local-digital-twins/thing.db"
